# dataset-augmenter

./: README.md  setup.cfg
dataset_augmenter/: algorithms.py  core.py
digits-dataset-augmenter/: core.py
tests/: test_algorithms.py  test_data_augmentation.py
tutorials/: data-augmentation.ipynb
