[metadata]
name = digits-dataset-augmenter
version = 0.0.1
author = Pablo Carneiro Elias
author_email = pablo.cael@gmail.com
description = A collection of digits dataset augmentation techniques 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
scripts =
    augment-digits-dataset.py

python_requires = >=3.6
install_requires =
    number-generator >= 0.0.1
    numpy >= 1.21.2
    python-mnist >= 0.7
    pytest >= 6.2.5
    argparse >= 1.4.0
    opencv-python >= 4.5.3.56

[options.data_files]
data = data/*

[pycodestyle]
count = False
ignore = E226,E302,E41
max-line-length = 120
statistics = True
